--- a/webapp/src/components/Button/index.module.scss
+++ b/webapp/src/components/Button/index.module.scss
@@ -16,7 +16,7 @@
     background-color: vars.$green;
 
     &:hover {
-      background-color: #21b821;
+      background-color: vars.$transparent-green;
     }
 
     &:active {
