--- a/webapp/src/components/Layout/index.module.scss
+++ b/webapp/src/components/Layout/index.module.scss
@@ -20,8 +20,8 @@ $breakpoint: '<=900px';
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
-
     @include mixins.media($breakpoint) {
+      padding: 20px 20px;
       position: static;
       display: flex;
       flex-flow: column nowrap;
@@ -32,11 +32,14 @@ $breakpoint: '<=900px';
       grid-column: 1;
       padding-top: 2px;
       padding-right: 10px;
-      width: 100%;
-      max-width: 150px;
+      width: auto;
+      max-width: 180px;
       height: auto;
       margin-bottom: 0;
       @include mixins.media($breakpoint) {
+        z-index: 11;
+        width: 100%;
+        max-width: 100%;
         margin-bottom: 15px;
         padding-right: 0;
       }
